# jv2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  httprequestworker.cpp  httprequestworker.h  isisTest.py  jsontablemodel.cpp  jsontablemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h
.azure-pipelines/: continuous.yml  pr.yml  release.yml
.azure-pipelines/templates/: codeQualityChecks.yml  createRelease.yml  linuxBuild.yml  linuxPackage.yml  osxBuild.yml  osxPackage.yml  windowsBuild.yml  windowsPackage.yml
.devcontainer/: devcontainer.json
backend/: isisInternal.py  isisTest.py  jv2Setup.py  launch.py  nexusInteraction.py  setup.cfg
backend/src/jv2backend/: __init__.py  isisInternal.py  nexusInteraction.py
ci/appimage/: com.projectaten.jv2.appdata.xml  com.projectaten.jv2.desktop
ci/windows/: jv2.iss
cmake/Modules/: FindOpenGl.cmake  conan-jv2.cmake
doc/Pages/: 1.intro.md  2.overview.md  3.operation.md  4.main_interface.md  5.plotting.md  6.settings.md
extra/: instrumentData.xml  tableConfig.xml
frontend/: CMakeLists.txt  chartview.cpp  chartview.h  datagathering.cpp  filtering.cpp  graphwidget.cpp  graphwidget.h  graphwidget.ui  httprequestworker.cpp  httprequestworker.h  icons.qrc  jsontablemodel.cpp  jsontablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  nexusInteraction.cpp  searching.cpp
frontend/cmake/Modules/: conan-jv2.cmake
frontend/src/: chartview.cpp  datagathering.cpp  graphwidget.cpp  graphwidget.ui  httprequestworker.cpp  httprequestworker.h  icons.qrc  jsontablemodel.cpp  jsontablemodel.h  main.cpp  mainwindow.cpp  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  nexusInteraction.cpp  platforminit.cpp  searching.cpp
nix/: icu.nix  qt6.nix  weggli.nix
scripts/linux/: jv2-build.def  jv2.def  jv2gui  jv2launcher  setup-for-development-ubuntu.sh
tools/development/linux/: Dockerfile  desktop-lite-debian.sh  install-and-configure-nix.sh  setup-for-development-ubuntu.sh
